tests/codegen/pass/015-max.hyg
assert(max(3,4) = 4);
assert(max(3.0f,4.0f) = 4.0f)