tests/codegen/fail/015-max.hyg
assert(max(3,4) = 3);
assert(max(3.0f,4.0f) = 3.0f)